# Rust_ML_Inference_Server

./: .dockerignore  Cargo.toml  Dockerfile  ReadMe.md  build.rs  data.json  zakir_fory_lua_gsoc_proposal.md
gsoc/: gsoc_cpp_rust_grpc_proposal.md
proto/: inference.proto
src/: main.rs
src/batching/: mod.rs
src/grpc/: server.rs
src/inference/: mod.rs
src/monitor/: mod.rs  prometheus.rs
